--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,31 @@
 <table> 
     <tr>            
-      <th colspan="4" id="result">{{result() }}</th>
+      <th colspan="4" id="result">{{result() ==''? '0' : result() }}</th>
     </tr>
     <tr >
-      <td class="first-row" (click)="reset()">AC</td>
+      <td *ngIf="result() == ''" class="first-row" (click)="reset()">AC</td>
+      <td *ngIf="result() !== ''" class="first-row" (click)="clear()">C</td>
       <td class="first-row" (click)="changeSigne()">+/-</td>
       <td class="first-row" (click)="percent()">%</td>
-      <td (click)="operate('/')">÷</td>
+      <td [ngClass]="isActiveOperator('/')"  (click)="operate('/')">÷</td>
     </tr>
       <tr>
       <td (click)="updateNumber(7)">7</td>
       <td (click)="updateNumber(8)">8</td>
       <td (click)="updateNumber(9)">9</td>
-      <td (click)="operate('*')" >×</td>
+      <td [ngClass]="isActiveOperator('*') "  (click)="operate('*')" >×</td>
     </tr>
       <tr>
       <td (click)="updateNumber(4)">4</td>
       <td (click)="updateNumber(5)">5</td>
       <td (click)="updateNumber(6)">6</td>
-      <td (click)="operate('-')" >–</td>
+      <td [ngClass]="isActiveOperator('-')"  (click)="operate('-')" >–</td>
     </tr>
       <tr>
       <td (click)="updateNumber(1)">1</td>
       <td (click)="updateNumber(2)">2</td>
       <td (click)="updateNumber(3)">3</td>
-      <td (click)="operate('+')" >+</td>
+      <td [ngClass]="isActiveOperator('+') " (click)="operate('+')" >+</td>
     </tr>
     <tr>
       <td (click)="updateNumber(0)" colspan="2" id="key0" >0</td>
