--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -62,6 +62,11 @@ tr:last-child td {
   border-bottom: none;  
 }
 
+.active{
+  background-color: white !important;
+  color: var(--color6) !important;
+}
+
 /* 0 key */
 tr:last-child td:first-child{
   text-align: center;
